@@ -7,6 +7,7 @@ next:
          - check_drivesize: fix case insensitive windows paths
          - update windows exporter to 0.30.8
          - msi: disable downgrades in windows installer
+         - update: add support to extract .deb files
          - fix https includes from subsection (#246)
          - fix multiple filter not being combined by logical OR
 
